# molecular_dynamics_GPU_acceleration

./: Dockerfile  LICENSE  README.md  cpu_forces.py  pyproject.toml  run_example.py  simulation.py
.github/workflows/: ci.yml
docs/: getting-started.md
md_sim/: __init__.py  benchmark.py  gpu_forces.py  integrator.py  utils.py
tests/: __init__.py  test_md_sim.py
