[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "md_sim"
version = "0.1.0"
description = "A minimal Molecular Dynamics simulator with Numba CUDA acceleration"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "numba",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["md_sim*"]